# Texture

./: .dockerignore  .gitignore  DEPLOY.md  DEV.md  Dockerfile  LICENSE.md  README.md  example_runner.py  main.py  process_data.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
analysis/: 23-11-01-multidomain.ipynb  23-11-01-wmt-news.ipynb  23-11-01-wmt18.ipynb  23-11-07-mimicdata.ipynb  23-11-29-duplicates.ipynb  24-01-20-DataValue.ipynb  24-01-30-vectordb.ipynb  24-01-30-vis_papers.ipynb  24-02-04-multitable.ipynb  24-02-04-umap.ipynb  DataValue.ipynb  Translation notes.md  character.parquet  dateData.parquet  duplicates-pii.ipynb  embeddings.ipynb  mainTable.parquet  multidomain.ipynb  opus100_analysis.ipynb  pii.ipynb  sentence.parquet  squad_analysis.ipynb  transform.ipynb  vast-2021.ipynb  word.parquet  word_levels.ipynb
analysis/experiments/: process_gpt.py  runner.py
analysis/notes/: Model embeddings notes.md
datasets/: README.md
datasets/processed/: bbc_with_lava.csv  bbc_with_lava.parquet  opus100-en-es.csv
datasets/raw/: multidomain.csv  opus100-en-es.csv  vast2021.csv  wmt-news.csv
docs/: README.txt  demo-1.md  demo-2.md  demo-3.md  index.md  overview.md  package-lock.json  package.json  quickstart.md  table-config.md  ui-config.md  vite-examples.md
docs/.vitepress/: config.mts
examples/llmcomparator/: INFO.md  analysis.ipynb  analysis.py
examples/lloom/: INFO.md  analysis.ipynb  analysis.py
examples/vis_papers/: 2_words.parquet  4_keywords.parquet  INFO.md  analysis.ipynb  analysis.py  info.txt  vis_paper_data.parquet
mosaic-ui/: index.html  package-lock.json  package.json  style.css
mosaic-ui/data/: opus100_en_es.parquet  squad_validation.parquet
mosaicui-test/: index.html  main.js  package-lock.json  package.json  style.css
textclean/: TextCleaner.py  __init__.py  duplicates.py  embeddings.py  model_metrics.py
textcleanui/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.cjs
textcleanui/public/: opus100_en_es.parquet  vast2021.parquet
textcleanui/src/: App.svelte  app.postcss  main.ts  stores.ts  types.ts
textprofilerbackend/: example_data.py  models.py  process_data.py  return_types.py  server.py  utils.py
textprofilerbackend/database/: __init__.py  connection.py  example_data.py
textprofilerbackend/llm/: client.py
textprofilerbackend/textclean/: TextCleaner.py  __init__.py  duplicates.py  embeddings.py
textprofilerbackend/transform/: __init__.py  word_tokenize.py
textprofilerfrontend/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.cjs
textprofilerfrontend/src/: App.svelte  app.postcss  main.ts  stores.ts
texture/: __init__.py  models.py  names.py  process_data.py  runner.py  runner_dev.py  server.py  utils.py
texture/database/: __init__.py  connection.py  example_data.py  preprocess.py
texture/extra/: embeddings.py  example_data.py  stopwords.py  tokenize.py
texture/preprocess/: __init__.py  embeddings.py  pipeline.py  tokenize.py  utils.py
texture/textclean/: TextCleaner.py
texture/transform/: __init__.py  word_tokenize.py
texture/userTransformCode/: transform.py
texture/userTransformLLM/: client.py
texture/widget/: __init__.py  index.css  index.js
texturebackend/: process_data.py  server.py  utils.py
texturebackend/database/: connection.py  example_data.py
texturebackend/llm/: client.py
texturebackend/textclean/: duplicates.py  model_metrics.py  utils.py
texturebackend/transform/: umap.py
texturefrontend/: .env  .env.production  .gitignore  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+186 files in other folders)
