[project]
name = "texture-viz"
version = "0.0.8"
description = "Process and profile text datasets interactively"
authors = [{ name = "Will Epperson", email = "willepp@live.com" }]
readme = "README.md"
keywords = ["text", "nlp", "data profiling", "llm"]
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.7,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "duckdb (>=1.1.3,<2.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "lancedb (>=0.18.0,<0.19.0)",
    "openai (>=1.60.2,<2.0.0)",
    "multiprocess (>=0.70.17,<0.71.0)",
    "anywidget (>=0.9.13,<0.10.0)",
    "numpy (>=2.2.2,<3.0.0)",
]

[project.optional-dependencies]
extra = [
    "sentence-transformers>=2.2.2",
    "torch>=2.1.1",
    "nltk>=3.8.1",
    "umap-learn>=0.5.5",
]

[project.urls]
repository = "https://github.com/cmudig/Texture"
homepage = "https://github.com/cmudig/Texture"

[project.scripts]
run_server = "texture.runner_dev_temp:dev_run"

[tool.poetry]
packages = [{ include = "texture" }]
include = [{ path = "texture/frontend/**/*", format = ["sdist", "wheel"] }]
exclude = ["texture/extra"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
